--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ http://www.templatemo.com/tm-476-conquer
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
