--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
 <title>Cyrus Studio</title>
 
 <!-- Google fonts -->
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+<link href='css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 
 <!-- font awesome -->
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="font-awesome.min.css" rel="stylesheet">
 
 <!-- bootstrap -->
-<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" href="bootstrap.min.css" />
 
 <!-- animate.css -->
-<link rel="stylesheet" href="assets/animate/animate.css" />
-<link rel="stylesheet" href="assets/animate/set.css" />
+<link rel="stylesheet" href="animate.css" />
+<link rel="stylesheet" href="set.css" />
 
 <!-- gallery -->
-<link rel="stylesheet" href="assets/gallery/blueimp-gallery.min.css">
+<link rel="stylesheet" href="blueimp-gallery.min.css">
 
 <!-- favicon -->
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="x-icon">
+<link rel="icon" href="favicon.ico" type="x-icon">
 
 
-<link rel="stylesheet" href="assets/style.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 
