--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       <div class="carousel-inner">
         <!-- Item 1 -->
         <div class="item active">
-          <img src="images/back1.jpg" alt="banner">          
+          <img src="back1.jpg" alt="banner">          
             <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-            		<img src="images/logobig.png" class="animated bounceInUp" alt="logo">
+            		<img src="logobig.png" class="animated bounceInUp" alt="logo">
               		<h1 class="animated bounceInLeft">Creative digital agency</h1>
               		<p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
               		<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
@@ -100,11 +100,11 @@
 
         <!-- Item 1 -->
         <div class="item">
-          <img src="images/back2.jpg" alt="banner">          
+          <img src="back2.jpg" alt="banner">          
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-                <img src="images/logobig.png" class="animated bounceInUp" alt="logo">
+                <img src="logobig.png" class="animated bounceInUp" alt="logo">
                   <h1 class="animated bounceInLeft">Creative digital agency</h1>
                   <p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
                   <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
@@ -116,11 +116,11 @@
 
         <!-- Item 1 -->
         <div class="item">
-          <img src="images/back3.jpg" alt="banner">          
+          <img src="back3.jpg" alt="banner">          
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-                <img src="images/logobig.png" class="animated bounceInUp" alt="logo">
+                <img src="logobig.png" class="animated bounceInUp" alt="logo">
                   <h1 class="animated bounceInLeft">Creative digital agency</h1>
                   <p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
                   <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
@@ -132,11 +132,11 @@
 
         <!-- Item 1 -->
         <div class="item">
-          <img src="images/back4.jpg" alt="banner">          
+          <img src="back4.jpg" alt="banner">          
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-                <img src="images/logobig.png" class="animated bounceInUp" alt="logo">
+                <img src="logobig.png" class="animated bounceInUp" alt="logo">
                   <h1 class="animated bounceInLeft">Creative digital agency</h1>
                   <p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
                   <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
@@ -203,68 +203,68 @@
 <!-- works -->
 <div id="works"  class=" clearfix grid"> 
     <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/1.jpg" alt="img01"/>
+        <img src="1.jpg" alt="img01"/>
         <figcaption>
             <h2>Adidas</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/1.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="1.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
      <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/2.jpg" alt="img01"/>
+        <img src="2.jpg" alt="img01"/>
         <figcaption>
             <h2>Jeans</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/2.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="2.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
      <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/3.jpg" alt="img01"/>
+        <img src="3.jpg" alt="img01"/>
         <figcaption>
             <h2>Metal</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/3.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="3.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
      <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/4.jpg" alt="img01"/>
+        <img src="4.jpg" alt="img01"/>
         <figcaption>
             <h2>Vintage</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/4.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="4.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
      <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/5.jpg" alt="img01"/>
+        <img src="5.jpg" alt="img01"/>
         <figcaption>
             <h2>Typers</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/5.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="5.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
      
      <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/6.jpg" alt="img01"/>
+        <img src="6.jpg" alt="img01"/>
         <figcaption>
             <h2>Marco</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/6.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="6.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
     <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/7.jpg" alt="img01"/>
+        <img src="7.jpg" alt="img01"/>
         <figcaption>
             <h2>Chinese</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/7.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="7.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
     <figure class="effect-oscar  wowload fadeInUp">
-        <img src="images/portfolio/8.jpg" alt="img01"/>
+        <img src="8.jpg" alt="img01"/>
         <figcaption>
             <h2>Dicrap</h2>
             <p>Lily likes to play with crayons and pencils<br>
-            <a href="images/portfolio/8.jpg" title="1" data-gallery>View more</a></p>            
+            <a href="8.jpg" title="1" data-gallery>View more</a></p>            
         </figcaption>
     </figure>
 
@@ -277,10 +277,10 @@
 	<h2 class="text-center  wowload fadeInUp">Some of our happy clients</h2>
   <div class="clearfix">
     <div class="col-sm-6 partners  wowload fadeInLeft">
-         <img src="images/partners/1.jpg"  alt="partners">
-         <img src="images/partners/2.jpg"  alt="partners">
-         <img src="images/partners/3.jpg" alt="partners">
-         <img src="images/partners/4.jpg" alt="partners">
+         <img src="1.jpg"  alt="partners">
+         <img src="2.jpg"  alt="partners">
+         <img src="3.jpg" alt="partners">
+         <img src="4.jpg" alt="partners">
     </div>
     <div class="col-sm-6">
 
@@ -288,21 +288,21 @@
     <div id="carousel-testimonials" class="carousel slide testimonails  wowload fadeInRight" data-ride="carousel">
     <div class="carousel-inner">  
       <div class="item active animated bounceInRight row">
-      <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="images/team/1.jpg" width="100" class="img-circle img-responsive"></div>
+      <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="1.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
       <p> I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. </p>      
       <span>Angel Smith - <b>eshop Canada</b></span>
       </div>
       </div>
       <div class="item  animated bounceInRight row">
-      <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="images/team/2.jpg" width="100" class="img-circle img-responsive"></div>
+      <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="2.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
       <p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.</p>
       <span>John Partic - <b>Crazy Pixel</b></span>
       </div>
       </div>
       <div class="item  animated bounceInRight row">
-      <div class="animated slideInLeft  col-xs-2"><img alt="portfolio" src="images/team/3.jpg" width="100" class="img-circle img-responsive"></div>
+      <div class="animated slideInLeft  col-xs-2"><img alt="portfolio" src="3.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
       <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue.</p>
       <span>Harris David - <b>Jet London</b></span>
@@ -331,7 +331,7 @@
 <div class="row grid team  wowload fadeInUpBig">	
 	<div class=" col-sm-3 col-xs-6">
 	<figure class="effect-chico">
-        <img src="images/team/8.jpg" alt="img01" class="img-responsive" />
+        <img src="8.jpg" alt="img01" class="img-responsive" />
         <figcaption>
             <p><b>Barbara Husto</b><br>Senior Designer<br><br><a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-twitter"></i></a></p>            
         </figcaption>
@@ -340,7 +340,7 @@
 
     <div class=" col-sm-3 col-xs-6">
 	<figure class="effect-chico">
-        <img src="images/team/10.jpg" alt="img01"/>
+        <img src="10.jpg" alt="img01"/>
         <figcaption>            
             <p><b>Barbara Husto</b><br>Senior Designer<br><br><a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-twitter"></i></a></p>            
         </figcaption>
@@ -349,7 +349,7 @@
 
     <div class=" col-sm-3 col-xs-6">
 	<figure class="effect-chico">
-        <img src="images/team/12.jpg" alt="img01"/>
+        <img src="12.jpg" alt="img01"/>
         <figcaption>
             <p><b>Barbara Husto</b><br>Senior Designer<br><br><a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-twitter"></i></a></p>          
         </figcaption>
@@ -358,7 +358,7 @@
 
     <div class=" col-sm-3 col-xs-6">
 	<figure class="effect-chico">
-        <img src="images/team/17.jpg" alt="img01"/>
+        <img src="17.jpg" alt="img01"/>
         <figcaption>
             <p><b>Barbara Husto</b><br>Senior Designer<br><br><a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-twitter"></i></a></p>
         </figcaption>
@@ -457,24 +457,24 @@ Copyright 2014 Cyrus Creative Studio. All rights reserved.
 
 
 <!-- jquery -->
-<script src="assets/jquery.js"></script>
+<script src="jquery.js"></script>
 
 <!-- wow script -->
-<script src="assets/wow/wow.min.js"></script>
+<script src="wow.min.js"></script>
 
 
 <!-- boostrap -->
-<script src="assets/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+<script src="bootstrap.js" type="text/javascript" ></script>
 
 <!-- jquery mobile -->
-<script src="assets/mobile/touchSwipe.min.js"></script>
-<script src="assets/respond/respond.js"></script>
+<script src="touchSwipe.min.js"></script>
+<script src="respond.js"></script>
 
 <!-- gallery -->
-<script src="assets/gallery/jquery.blueimp-gallery.min.js"></script>
+<script src="jquery.blueimp-gallery.min.js"></script>
 
 <!-- custom script -->
-<script src="assets/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
