--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
         <input type="text" placeholder="Company">
         <textarea rows="5" placeholder="Message"></textarea>
         <button class="btn btn-primary"><i class="fa fa-paper-plane"></i> Send</button>
+	<send>
       </div>
   </div>
 
