--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Cyrus Studio</title>
+<title>Moderne Technik GmbH</title>
 
 <!-- Google fonts -->
 <link href='css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
@@ -59,11 +59,11 @@
             <!-- Nav Starts -->
             <div class="navbar-collapse  collapse">
               <ul class="nav navbar-nav navbar-right scroll">
-                 <li class="active"><a href="#home">Home</a></li>
-                 <li ><a href="#about">About</a></li>
-                 <li ><a href="#works">Works</a></li>
-                 <li ><a href="#partners">Partners</a></li>
-                 <li ><a href="#contact">Contact</a></li>                 
+                 <li class="active"><a href="#home">Startseite</a></li>
+                 <li ><a href="#about">Über uns</a></li>
+                 <li ><a href="#works">Arbeit</a></li>
+                 <li ><a href="#partners">Partner</a></li>
+                 <li ><a href="#contact">Kontakt</a></li>                 
               </ul>
             </div>
             <!-- #Nav Ends -->
@@ -88,8 +88,8 @@
             <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-            		<img src="logobig.png" class="animated bounceInUp" alt="logo">
-              		<h1 class="animated bounceInLeft">Creative digital agency</h1>
+            		<!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
+              		<h1 class="animated bounceInLeft">Bauen Webseiten</h1>
               		<p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
               		<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
               		</div>
