--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             		<div class="caption-info">
             		<!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
               		<h1 class="animated bounceInLeft">Bauen Webseiten</h1>
-              		<p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
+              		<p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
               		<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
               		</div>
               	</div>
@@ -104,9 +104,9 @@
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-                <img src="logobig.png" class="animated bounceInUp" alt="logo">
-                  <h1 class="animated bounceInLeft">Creative digital agency</h1>
-                  <p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
+                <!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
+                  <h1 class="animated bounceInLeft">Bauen Webseiten</h1>
+                  <p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
                   <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
                   </div>
                 </div>
@@ -120,9 +120,9 @@
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-                <img src="logobig.png" class="animated bounceInUp" alt="logo">
-                  <h1 class="animated bounceInLeft">Creative digital agency</h1>
-                  <p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
+                <!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
+                  <h1 class="animated bounceInLeft">Bauen Webseiten</h1>
+                  <p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
                   <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
                   </div>
                 </div>
@@ -136,9 +136,9 @@
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
-                <img src="logobig.png" class="animated bounceInUp" alt="logo">
-                  <h1 class="animated bounceInLeft">Creative digital agency</h1>
-                  <p class="animated bounceInRight">Lead by passionate and uber progressive team that lives and breathes design.</p>
+                <!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
+                  <h1 class="animated bounceInLeft">Bauen Webseiten</h1>
+                  <p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
                   <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
                   </div>
                 </div>
