--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             		<!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
               		<h1 class="animated bounceInLeft">Bauen Webseiten</h1>
               		<p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
-              		<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
+              		<!--<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>-->
               		</div>
               	</div>
             </div>
@@ -107,7 +107,7 @@
                 <!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
                   <h1 class="animated bounceInLeft">Bauen Webseiten</h1>
                   <p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
-                  <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
+                  <!--<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>-->
                   </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
                   <h1 class="animated bounceInLeft">Bauen Webseiten</h1>
                   <p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
-                  <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
+                  <!--<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>-->
                   </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 <!--<img src="logobig.png" class="animated bounceInUp" alt="logo">-->
                   <h1 class="animated bounceInLeft">Bauen Webseiten</h1>
                   <p class="animated bounceInRight">Ihr Ideen werden bei uns umgesetzt.</p>
-                  <div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>
+                  <!--<div class="scroll animated fadeInUp"><a href="#works" class="btn btn-default"><i class="fa fa-flask"></i>  View Project</a> <a href="#contact" class="btn btn-default"><i class="fa fa-paper-plane-o"></i> Start Your Project</a></div>-->
                   </div>
                 </div>
             </div>
@@ -162,38 +162,38 @@
 
 <!-- Cirlce Starts -->
 <div id="about"  class="container spacer about">
-<h2 class="text-center wowload fadeInUp">Creative digital agency based on London</h2>  
+<h2 class="text-center wowload fadeInUp">Wir erstellen Webseiten mit HTML5 und CSS.</h2>  
   <div class="row">
   <div class="col-sm-6 wowload fadeInLeft">
-    <h4><i class="fa fa-paint-brush"></i> Design</h4>
-    <p>Creative digital agency for sleek and sophisticated solutions for mobile, websites and software designs, lead by passionate and uber progressive team that lives and breathes design. Creative digital agency for sleek and sophisticated solutions for mobile, websites and software designs.</p>
+    <h4><i class="fa fa-paint-brush"></i>Design</h4>
+    <p>Das Design wird von ihnen Ausgesucht. Man kann natürlich später auch noch kleinigkeiten ändern. Wir freuen uns für sie die Webseite zu Designen.</p>
     
 
   </div>
   <div class="col-sm-6 wowload fadeInRight">
-  <h4><i class="fa fa-code"></i> Frontend & Backend Development</h4>
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>    
+  <h4><i class="fa fa-code"></i>Inhalt</h4>
+  <p>Wir bauen die Webseite nach ihrem Geschmack. Den Inhalt geben sie vor. Wir geben natürlich ein paar gute Ideen vor aber sie entscheiden was auf die Seite kommt.</p>    
   </div>
   </div>
 
   <div class="process">
-  <h3 class="text-center wowload fadeInUp">Process</h3>
+  <h3 class="text-center wowload fadeInUp">Aufbau der Entwicklung.</h3>
 	<ul class="row text-center list-inline  wowload bounceInUp">
    		<li>
-            <span><i class="fa fa-history"></i><b>Research</b></span>
+            <span><i class="fa fa-history"></i><b>Nachforschungen</b></span>
         </li>
         <li>
-            <span><i class="fa fa-puzzle-piece"></i><b>Plan</b></span>
+            <span><i class="fa fa-puzzle-piece"></i><b>Plan erstellen</b></span>
         </li>
         <li>
-            <span><i class="fa fa-database"></i><b>Develop</b></span>
+            <span><i class="fa fa-database"></i><b>Entwickeln</b></span>
         </li>
         <li>
-            <span><i class="fa fa-magic"></i><b>Integration</b></span>
+            <span><i class="fa fa-magic"></i><b>Online stellen</b></span>
         </li>        
-        <li>
+        <!--<li>
             <span><i class="fa fa-cloud-upload"></i><b>Deliver</b></span>
-        </li>
+        </li>-->
   	</ul>
   </div>
 </div>
