--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                  <li class="active"><a href="#home">Startseite</a></li>
                  <li ><a href="#about">Über uns</a></li>
                  <li ><a href="#works">Arbeit</a></li>
-                 <li ><a href="#partners">Partner</a></li>
+                 <li ><a href="#partners">Team</a></li>
                  <li ><a href="#contact">Kontakt</a></li>                 
               </ul>
             </div>
@@ -172,7 +172,7 @@
   </div>
   <div class="col-sm-6 wowload fadeInRight">
   <h4><i class="fa fa-code"></i>Inhalt</h4>
-  <p>Wir bauen die Webseite nach ihrem Geschmack. Den Inhalt geben sie vor. Wir geben natürlich ein paar gute Ideen vor aber sie entscheiden was auf die Seite kommt.</p>    
+  <p>Wir bauen die Webseite nach ihrem Geschmack. Den Inhalt geben sie vor. Wir geben natürlich ein paar gute Ideen vor aber sie entscheiden was auf die Seite kommt. Wir können leider die Webseite nicht online stellen. Wir hoffen, dass sie das nicht so schlimm finden.</p>    
   </div>
   </div>
 
@@ -188,9 +188,9 @@
         <li>
             <span><i class="fa fa-database"></i><b>Entwickeln</b></span>
         </li>
-        <li>
+       <!-- <li>
             <span><i class="fa fa-magic"></i><b>Online stellen</b></span>
-        </li>        
+        </li>-->       
         <!--<li>
             <span><i class="fa fa-cloud-upload"></i><b>Deliver</b></span>
         </li>-->
@@ -201,7 +201,7 @@
 
 
 <!-- works -->
-<div id="works"  class=" clearfix grid"> 
+<!--<div id="works"  class=" clearfix grid"> 
     <figure class="effect-oscar  wowload fadeInUp">
         <img src="1.jpg" alt="img01"/>
         <figcaption>
@@ -269,12 +269,12 @@
     </figure>
 
      
-</div>
+</div>-->
 <!-- works -->
 
 
 <div id="partners" class="container spacer ">
-	<h2 class="text-center  wowload fadeInUp">Some of our happy clients</h2>
+	<h2 class="text-center  wowload fadeInUp">Unser Team</h2>
   <div class="clearfix">
     <div class="col-sm-6 partners  wowload fadeInLeft">
          <img src="1.jpg"  alt="partners">
@@ -290,22 +290,22 @@
       <div class="item active animated bounceInRight row">
       <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="1.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
-      <p> I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. </p>      
-      <span>Angel Smith - <b>eshop Canada</b></span>
+      <p>Ich bin zuständig für das CSS und habe mir das bauen von Webseiten selber angeeignet. Ich hoffe sie haben bei uns viel Spaß und kommen auf uns zu um eine Webseite bauen zu lassen.</p>      
+      <span>Christian Maier - <b>CSS-Entwickler</b></span>
       </div>
       </div>
       <div class="item  animated bounceInRight row">
       <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="2.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
-      <p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.</p>
-      <span>John Partic - <b>Crazy Pixel</b></span>
+      <p>Ich kümmer mich um das schreiben des HTML Codes und hoffe auch, dass es ihnen bei uns gut gefällt. Bitte kommen sie zu uns wir bauen ihnen gerne ihre Webseite. Auch bin ich der Inhaber der Firma wenn sie Fragen haben können sie sich gerne an mich wenden.</p>
+      <span>Niklas Pfister - <b>HTML-Entwickler und Inhaber der Firma</b></span>
       </div>
       </div>
       <div class="item  animated bounceInRight row">
       <div class="animated slideInLeft  col-xs-2"><img alt="portfolio" src="3.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
-      <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue.</p>
-      <span>Harris David - <b>Jet London</b></span>
+      <p>Ich kümmere mich um die beratung unserer Kunden. Ich gebe Tipps über das Layout und stelle ihnen Designs vor, die für ihre Idee geeignet wären. Auch bin ich noch für die Bilder zuständig. Wünsche ihnen noch viel Spaß bei uns.</p>
+      <span>Ivonne Pfister - <b>Ihre Beraterin für das Design und Layout.</b></span>
       </div>
       </div>
   </div>
@@ -326,7 +326,7 @@
 
 
 <!-- team -->
-<h3 class="text-center  wowload fadeInUp">Our team</h3>
+<!--<h3 class="text-center  wowload fadeInUp">Our team</h3>
 <p class="text-center  wowload fadeInLeft">Our creative team that is making everything possible</p>
 <div class="row grid team  wowload fadeInUpBig">	
 	<div class=" col-sm-3 col-xs-6">
@@ -366,7 +366,7 @@
     </div>
 
  
-</div>
+</div>-->
 <!-- team -->
 
 </div>
@@ -385,16 +385,16 @@
 <div class="container">
 <div class="row text-center  wowload fadeInDownBig">
 	<div class="col-sm-3 col-xs-6">
-	<i class="fa fa-smile-o  fa-5x"></i><h4>24 Clients</h4>
+	<i class="fa fa-smile-o  fa-5x"></i><h4>2 Klienten</h4>
 	</div>
 	<div class="col-sm-3 col-xs-6">
-	<i class="fa fa-rocket  fa-5x"></i><h4>75 Projects</h4>
+	<i class="fa fa-rocket  fa-5x"></i><h4>2 Projekte</h4>
 	</div>
 	<div class="col-sm-3 col-xs-6">
-	<i class="fa fa-cloud-download  fa-5x"></i><h4>454 Downloads</h4>
+	<i class="fa fa-cloud-download  fa-5x"></i><h4>20 Downloads</h4>
 	</div>
 	<div class="col-sm-3 col-xs-6">
-	<i class="fa fa-map-marker fa-5x"></i><h4>2 Offices</h4>
+	<i class="fa fa-map-marker fa-5x"></i><h4>1 Büro</h4>
 	</div>
 </div>
 </div>
