--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@
 <div id="contact" class="spacer">
 <!--Contact Starts-->
 <div class="container contactform center">
-<h2 class="text-center  wowload fadeInUp">Get in touch to start your project</h2>
+<h2 class="text-center  wowload fadeInUp">Schreiben sie uns.</h2>
   <div class="row wowload fadeInLeftBig">      
       <div class="col-sm-6 col-sm-offset-3 col-xs-12">      
         <input type="text" placeholder="Name">
-        <input type="text" placeholder="Company">
-        <textarea rows="5" placeholder="Message"></textarea>
-        <button class="btn btn-primary"><i class="fa fa-paper-plane"></i> Send</button>
+        <input type="text" placeholder="E-Mail">
+        <textarea rows="5" placeholder="Nachricht"></textarea>
+        <button class="btn btn-primary"><i class="fa fa-paper-plane"></i>Abschicken</button>
 	<send>
       </div>
   </div>
@@ -434,7 +434,7 @@
 <!-- Footer Starts -->
 <div class="footer text-center spacer">
 <p class="wowload flipInX"><a href="#"><i class="fa fa-facebook fa-2x"></i></a> <a href="#"><i class="fa fa-dribbble fa-2x"></i></a> <a href="#"><i class="fa fa-twitter fa-2x"></i></a> <a href="#"><i class="fa fa-linkedin fa-2x"></i></a> </p>
-Copyright 2014 Cyrus Creative Studio. All rights reserved.
+Copyright 2016 Moderne Technik GmbH. Alle Rechte vorbehalten.
 </div>
 <!-- # Footer Ends -->
 <a href="#home" class="gototop "><i class="fa fa-angle-up  fa-3x"></i></a>
