--- a/index.html
+++ b/index.html
@@ -290,15 +290,15 @@
       <div class="item active animated bounceInRight row">
       <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="1.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
-      <p>Ich bin zuständig für das CSS und habe mir das bauen von Webseiten selber angeeignet. Ich hoffe sie haben bei uns viel Spaß und kommen auf uns zu um eine Webseite bauen zu lassen.</p>      
-      <span>Christian Maier - <b>CSS-Entwickler</b></span>
+      <p>Ich kümmer mich um das schreiben des HTML Codes und hoffe auch, dass es ihnen bei uns gut gefällt. Bitte kommen sie zu uns wir bauen ihnen gerne ihre Webseite. Auch bin ich der Inhaber der Firma wenn sie Fragen haben können sie sich gerne an mich wenden.</p>      
+      <span>Niklas Pfister - <b>HTML-Entwickler und Inhaber der Firma</b></span>
       </div>
       </div>
       <div class="item  animated bounceInRight row">
       <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="2.jpg" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
-      <p>Ich kümmer mich um das schreiben des HTML Codes und hoffe auch, dass es ihnen bei uns gut gefällt. Bitte kommen sie zu uns wir bauen ihnen gerne ihre Webseite. Auch bin ich der Inhaber der Firma wenn sie Fragen haben können sie sich gerne an mich wenden.</p>
-      <span>Niklas Pfister - <b>HTML-Entwickler und Inhaber der Firma</b></span>
+      <p>Ich bin zuständig für das CSS und habe mir das bauen von Webseiten selber angeeignet. Ich hoffe sie haben bei uns viel Spaß und kommen auf uns zu um eine Webseite bauen zu lassen.</p>
+      <span>Maier Christian - <b>CSS-Entwickler</b></span>
       </div>
       </div>
       <div class="item  animated bounceInRight row">
@@ -435,6 +435,10 @@
 <div class="footer text-center spacer">
 <p class="wowload flipInX"><a href="#"><i class="fa fa-facebook fa-2x"></i></a> <a href="#"><i class="fa fa-dribbble fa-2x"></i></a> <a href="#"><i class="fa fa-twitter fa-2x"></i></a> <a href="#"><i class="fa fa-linkedin fa-2x"></i></a> </p>
 Copyright 2016 Moderne Technik GmbH. Alle Rechte vorbehalten.
+	<p>Besitzer: Niklas Pfister</p>
+	<p>E-Mail: moderne.technik@gmx.at</p>
+	<p>Anschrift: Ankenreuthe 204 / 6858 Bildstein</p>
+	<p>Tel.: +43670/2021967</p>
 </div>
 <!-- # Footer Ends -->
 <a href="#home" class="gototop "><i class="fa fa-angle-up  fa-3x"></i></a>
