--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="carousel-inner">
         <!-- Item 1 -->
         <div class="item active">
-          <img src="back1.jpg" alt="banner">          
+          <img src="DSC00322.JPG" alt="banner">          
             <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
@@ -100,7 +100,7 @@
 
         <!-- Item 1 -->
         <div class="item">
-          <img src="back2.jpg" alt="banner">          
+          <img src="DSC00422.JPG" alt="banner">          
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
@@ -116,7 +116,7 @@
 
         <!-- Item 1 -->
         <div class="item">
-          <img src="back3.jpg" alt="banner">          
+          <img src="DSC00387.JPG" alt="banner">          
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
@@ -132,7 +132,7 @@
 
         <!-- Item 1 -->
         <div class="item">
-          <img src="back4.jpg" alt="banner">          
+          <img src="DSC00560.JPG" alt="banner">          
              <div class="carousel-caption">
             	<div class="caption-wrapper">
             		<div class="caption-info">
