--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <ul class="nav navbar-nav navbar-right scroll">
                  <li class="active"><a href="#home">Startseite</a></li>
                  <li ><a href="#about">Über uns</a></li>
-                 <li ><a href="#works">Arbeit</a></li>
+                 <!--<li ><a href="#works">Arbeit</a></li>-->
                  <li ><a href="#partners">Team</a></li>
                  <li ><a href="#contact">Kontakt</a></li>                 
               </ul>
