--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 <meta charset="UTF-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -419,7 +419,6 @@
         <input type="text" placeholder="E-Mail">
         <textarea rows="5" placeholder="Nachricht"></textarea>
         <button class="btn btn-primary"><i class="fa fa-paper-plane"></i>Abschicken</button>
-	<send>
       </div>
   </div>
 
