--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <link rel="stylesheet" href="blueimp-gallery.min.css">
 
 <!-- favicon -->
-<link rel="shortcut icon" href="favicon.ico" type="x-icon">
-<link rel="icon" href="favicon.ico" type="x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 
 <link rel="stylesheet" href="style.css">
