--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
       </div>
       </div>
       <div class="item  animated bounceInRight row">
-      <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="2.jpg" width="100" class="img-circle img-responsive"></div>
+      <div class="animated slideInLeft col-xs-2"><img alt="portfolio" src="Chris.JPG" width="100" class="img-circle img-responsive"></div>
       <div  class="col-xs-10">
       <p>Ich bin zuständig für das CSS und habe mir das bauen von Webseiten selber angeeignet. Ich hoffe sie haben bei uns viel Spaß und kommen auf uns zu um eine Webseite bauen zu lassen.</p>
       <span>Maier Christian - <b>CSS-Entwickler</b></span>
