--- a/Privat/index.html
+++ b/Privat/index.html
@@ -27,7 +27,7 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="Privat/style.css">
 
 </head>
 
