--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="resume/stylesheet.css"/>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>Niklas Pfister</title>
 	</head>
 	<body>
