--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,9 @@
 			<p id="name">Niklas Pfister</p>
 			<a href="mailto:you@yourdomain.com"><p id="email">niklaspfistzer@gmx.net</p></a>
 		</div>
-		<div class="left"></div>
+		<div class="left">
+			<img src="DSC00022.JPG"/>
+		</div>
 		<div class="right">
 			<h4>Bewerbung</h4>
 			<p>Ich bewerbe mich bei ihnen als IT-Techniker.</p>
