--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   <div class="clearfix">
     <div class="col-sm-6 partners  wowload fadeInLeft">
          <img src="1.jpg"  alt="partners">
-         <img src="Chris.JPG"  alt="partners">
+         <img src="2.jpg"  alt="partners">
          <img src="3.jpg" alt="partners">
          <img src="4.jpg" alt="partners">
     </div>
