--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
 			<a href="mailto:you@yourdomain.com"><p id="email">niklaspfistzer@gmx.net</p></a>
 		</div>
 		<div class="left">
-			<img src="DSC00022.JPG"/>
+			<img src="DSC00022_gilt.xcf"/>
 		</div>
 		<div class="right">
 			<h4>Bewerbung</h4>
