--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id="header">
 			<p id="name">Niklas Pfister</p>
-			<a href="mailto:you@yourdomain.com"><p id="email">niklaspfistzer@gmx.net</p></a>
+			<a href="mailto:you@yourdomain.com"><p id="email">niklaspfister@gmx.net</p></a>
 		</div>
 		<div class="left">
 			<img src="DSC00022_gilt.JPG"/>
@@ -16,7 +16,7 @@
 			<h4>Bewerbung</h4>
 			<p>Ich bewerbe mich bei ihnen als IT-Techniker.</p>
 			<h4>Erfahrung</h4>
-			<p>Hab in der Schule einiges gemacht und auich den ECDL-Führerschein.</p>
+			<p>Hab in der Schule einiges gemacht und auch den ECDL-Führerschein.</p>
 			<h4>Fertigkeit</h4>
 			<p>Sprache: HTML5, JavaScript, </p>
 		</div>
