--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,7 @@
 			<h4>Erfahrung</h4>
 			<p>Hab in der Schule einiges gemacht und auch den ECDL-Führerschein.</p>
 			<h4>Fertigkeit</h4>
-			<p>Sprache: HTML5, JavaScript, </p>
+			<p>Sprache: HTML5, JavaScript, CSS</p>
 		</div>
 		<div id="footer">
 			<p>Ankenreuthe 204, 6858 Bildstein, | Tel: +436702021967</p>
