--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id="header">
 			<p id="name">Niklas Pfister</p>
-			<a href="mailto:you@yourdomain.com"><p id="email">niklaspfister@gmx.net</p></a>
+			<a href="mailto:niklaspfister@gmx.net"><p id="email">niklaspfister@gmx.net</p></a>
 		</div>
 		<div class="left">
 			<img src="DSC00022_gilt.JPG"/>
