--- a/resume/index.html
+++ b/resume/index.html
@@ -19,6 +19,13 @@
 			<p>Hab in der Schule einiges gemacht und auch den ECDL-Führerschein.</p>
 			<h4>Fertigkeit</h4>
 			<p>Sprache: HTML5, JavaScript, CSS</p>
+			<h4>Schulische Laufbahn</h4>
+			<ol>
+				<li>Volksschule Rotkreuz (Lustenau)  	  2007-2011</li>
+				<li>Mittelschule Rheindorf (Lustenau)     2011-2013</li>
+				<li>Mittelschule Schwarzach (Schwarzach)  2013-2015</li>
+				<li>Borg Egg (Egg)  			  2015-2019</li>
+			</ol>
 		</div>
 		<div id="footer">
 			<p>Ankenreuthe 204, 6858 Bildstein, | Tel: +436702021967</p>
