--- a/resume/index.html
+++ b/resume/index.html
@@ -15,10 +15,11 @@
 		<div class="right">
 			<h4>Bewerbung</h4>
 			<p>Ich bewerbe mich bei ihnen als IT-Techniker.</p>
-			<h4>Erfahrung</h4>
-			<p>Hab in der Schule einiges gemacht und auch den ECDL-Führerschein.</p>
-			<h4>Fertigkeit</h4>
-			<p>Sprache: HTML5, JavaScript, CSS</p>
+			<h4>Name: Niklas Pfister</h4>
+			<h4>Geburtsdatum: 01.09.2000</h4>
+			<h4>Adresse: Ankenreuthe 204</h4>
+			<h4>Wohnort: 6858 Bildstein</h4>
+			<h4>Staatsbürgerschaft: Deutsch</h4>
 			<h4>Schulische Laufbahn</h4>
 			<ol>
 				<li>Volksschule Rotkreuz (Lustenau)  	  2007-2011</li>
@@ -26,6 +27,12 @@
 				<li>Mittelschule Schwarzach (Schwarzach)  2013-2015</li>
 				<li>Borg Egg (Egg)  			  2015-2019</li>
 			</ol>
+			<h4>Erfahrung</h4>
+			<p>Hab in der Schule einiges gemacht und auch den ECDL-Führerschein.</p>
+			<h4>Fertigkeit</h4>
+			<p>Sprache: HTML5, JavaScript, CSS</p>
+			
+			
 		</div>
 		<div id="footer">
 			<p>Ankenreuthe 204, 6858 Bildstein, | Tel: +436702021967</p>
