--- a/resume/index.html
+++ b/resume/index.html
@@ -22,10 +22,10 @@
 			<h4>Staatsbürgerschaft: Deutsch</h4>
 			<h4>Schulische Laufbahn</h4>
 			<ol>
-				<li>Volksschule Rotkreuz (Lustenau)  	  2007-2011</li>
-				<li>Mittelschule Rheindorf (Lustenau)     2011-2013</li>
-				<li>Mittelschule Schwarzach (Schwarzach)  2013-2015</li>
-				<li>Borg Egg (Egg)  			  2015-2019</li>
+				<li><a href="http://vs-rotkreuz-lustenau.vobs.at"/>Volksschule Rotkreuz (Lustenau) 2007-2011</li>
+				<li><a href="http://nms-rheindorf.vobs.at/"/>Mittelschule Rheindorf (Lustenau) 2011-2013</li>
+				<li><a href="http://www.msschwarzach.at/nc/news-and-events.html"/>Mittelschule Schwarzach (Schwarzach) 2013-2015</li>
+				<li><a href="http://www.borg.at/home/"/>Borg Egg (Egg) 2015-2019</li>
 			</ol>
 			<h4>Erfahrung</h4>
 			<p>Hab in der Schule einiges gemacht und auch den ECDL-Führerschein.</p>
